HTML Files - register and login

--- a/.settings/com.google.appengine.eclipse.core.prefs
+++ b/.settings/com.google.appengine.eclipse.core.prefs
@@ -1,4 +1,25 @@
 eclipse.preferences.version=1
 filesCopiedToWebInfLib=appengine-api-1.0-sdk-1.9.25.jar|appengine-api-labs.jar|appengine-endpoints-deps.jar|appengine-endpoints.jar|appengine-jsr107cache-1.9.25.jar|asm-4.0.jar|datanucleus-api-jdo-3.1.3.jar|datanucleus-api-jpa-3.1.3.jar|datanucleus-appengine-2.1.2.jar|datanucleus-core-3.1.3.jar|geronimo-jpa_2.0_spec-1.0.jar|jdo-api-3.0.1.jar|jsr107cache-1.1.jar|jta-1.1.jar
 gaeDatanucleusVersion=v2
+gaeDeployDialogSettings=
 gaeHrdEnabled=true
+gaeLaunchAppInBrowser=true
+googleCloudSqlEnabled=true
+localDevMySqlEnabled=true
+mySqlDatabaseName=Auction_System
+mySqlDatabasePassword=pavan
+mySqlDatabaseUser=pavan
+mySqlHostName=173.194.226.157
+mySqlIsConfigured=true
+mySqlJdbcJar=C\:\\Program Files\\MySQL\\mysql-connector-java-5.1.37\\mysql-connector-java-5.1.37-bin.jar
+mySqlPort=3306
+prodDatabaseName=Auction_System
+prodDatabasePassword=pavan
+prodDatabaseUser=pavan
+prodInstanceName=auctionsystem-27608144\:clouddb
+prodIsConfigured=true
+testDatabaseName=Auction_System
+testDatabasePassword=pavan
+testDatabaseUser=pavan
+testInstanceName=clouddb
+testIsConfigured=true
