--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xmlns="http://java.sun.com/xml/ns/javaee"
-xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
+
+	<!-- <servlet> <servlet-name>Auction_System_Google_App_Engine</servlet-name> 
+		<servlet-class>com.gae.cns.ase.Auction_System_Google_App_EngineServlet</servlet-class> 
+		</servlet> <servlet-mapping> <servlet-name>Auction_System_Google_App_Engine</servlet-name> 
+		<url-pattern>/auction_system_google_app_engine</url-pattern> </servlet-mapping> 
+		<welcome-file-list> <welcome-file>index.html</welcome-file> </welcome-file-list> -->
+
+	<!-- <servlet> <servlet-name>Login</servlet-name> <servlet-class>com.gae.cns.ase.Login</servlet-class> 
+		</servlet> <servlet-mapping> <servlet-name>Login</servlet-name> <url-pattern>/login</url-pattern> 
+		</servlet-mapping> -->
+
 	<servlet>
-		<servlet-name>Auction_System_Google_App_Engine</servlet-name>
-		<servlet-class>com.gae.cns.ase.Auction_System_Google_App_EngineServlet</servlet-class>
+		<description></description>
+		<display-name>Controller</display-name>
+		<servlet-name>Controller</servlet-name>
+		<servlet-class>com.gae.cns.ase.Controller</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>Auction_System_Google_App_Engine</servlet-name>
-		<url-pattern>/auction_system_google_app_engine</url-pattern>
+		<servlet-name>Controller</servlet-name>
+		<url-pattern>/controller</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>html/login.jsp</welcome-file>
 	</welcome-file-list>
+
 </web-app>
